packages/shifts/test_output_3.txt
bun test v1.3.8 (b64edcb4)

tests/sprint_3_pagination.test.ts:
(pass) WH-115: History Pagination > passes limit and offset to database query [0.61ms]
(pass) WH-115: History Pagination > handles default/zero values correctly [0.09ms]

tests/publish.test.ts:
DEBUG: publishSchedule received: {
  status: "published",
  schedulesCount: 1,
  activeOrgId: "org_123",
  recurrenceEnabled: undefined,
}
(pass) Publish  (WH-131 Fix) > creates ONE shift with MULTIPLE assignments for a multi-worker block [6.30ms]
DEBUG: publishSchedule received: {
  status: "published",
  schedulesCount: 1,
  activeOrgId: "org_123",
  recurrenceEnabled: undefined,
}
(pass) Publish  (WH-131 Fix) > handles OPEN slots (null workers) correctly [0.84ms]
(pass) Publish  (WH-131 Fix) > rejects empty dates array [0.73ms]
DEBUG: publishSchedule received: {
  status: "published",
  schedulesCount: 1,
  activeOrgId: "org_123",
  recurrenceEnabled: undefined,
}
(pass) Publish  (WH-131 Fix) > rejects past dates [0.53ms]
DEBUG: publishSchedule received: {
  status: "published",
  schedulesCount: 1,
  activeOrgId: "org_123",
  recurrenceEnabled: true,
}
(pass) Publish  (WH-131 Fix) > expands recurring dates (weekly) [2.01ms]
DEBUG: publishSchedule received: {
  status: "published",
  schedulesCount: 1,
  activeOrgId: "org_123",
  recurrenceEnabled: true,
}
(pass) Publish  (WH-131 Fix) > expands recurring dates (on_date) [1.00ms]

tests/calculations.test.ts:
(pass) calculateShiftPay > calculates pay for exact hours [0.02ms]
(pass) calculateShiftPay > calculates pay for partial hours (rounding up preference)
(pass) calculateShiftPay > handles partial cents correctly (ceil) [0.01ms]
(pass) calculateShiftPay > returns 0 for zero or negative time [0.02ms]
(pass) calculateShiftPay > returns 0 for zero rate

tests/upcoming.test.ts:
(pass) GET /shifts/upcoming > returns 200 OK [0.24ms]
(pass) GET /shifts/upcoming > returns only active shifts (not completed/cancelled) [0.07ms]
(pass) GET /shifts/upcoming > sorts by startTime ascending [0.08ms]

tests/transaction_poc.test.ts:

# Unhandled error between tests
-------------------------------
1 | })
2 | {
    ^
SyntaxError: Export named 'OverlapService' not found in module '/Users/av/Documents/pavn/packages/shifts/src/services/overlap.ts'.
      at loadAndEvaluateModule (2:1)
-------------------------------


tests/middleware.test.ts:
(pass) Middleware Verification > WH-113: Adds X-Request-ID header [2.26ms]
18 |         const app = new Hono();
19 |         app.use("*", requestId());
20 |         app.onError((err, c) => errorHandler(err, c)); // Fix type mismatch if needs cast?
21 | 
22 |         app.get("/error", () => {
23 |             throw new AppError("Test Error", "TEST_CODE", 400, { foo: "bar" });
                       ^
AppError: Test Error
 statusCode: 400,
    details: {
  foo: "bar",
},
       code: "TEST_CODE"

      at <anonymous> (/Users/av/Documents/pavn/packages/shifts/tests/middleware.test.ts:23:19)
      at dispatch (/Users/av/Documents/pavn/node_modules/.bun/hono@4.11.7/node_modules/hono/dist/compose.js:22:23)
      at <anonymous> (/Users/av/Documents/pavn/packages/observability/src/index.ts:74:11)
      at dispatch (/Users/av/Documents/pavn/node_modules/.bun/hono@4.11.7/node_modules/hono/dist/compose.js:22:23)
      at <anonymous> (/Users/av/Documents/pavn/node_modules/.bun/hono@4.11.7/node_modules/hono/dist/hono-base.js:301:31)
      at <anonymous> (/Users/av/Documents/pavn/packages/shifts/tests/middleware.test.ts:26:31)

(pass) Middleware Verification > WH-112: Standardizes AppError response [0.82ms]
38 |         const app = new Hono();
39 |         app.use("*", requestId());
40 |         app.onError((err, c) => errorHandler(err, c));
41 | 
42 |         app.get("/panic", () => {
43 |             throw new Error("Something exploded");
                           ^
error: Something exploded
      at <anonymous> (/Users/av/Documents/pavn/packages/shifts/tests/middleware.test.ts:43:23)
      at dispatch (/Users/av/Documents/pavn/node_modules/.bun/hono@4.11.7/node_modules/hono/dist/compose.js:22:23)
      at <anonymous> (/Users/av/Documents/pavn/packages/observability/src/index.ts:74:11)
      at dispatch (/Users/av/Documents/pavn/node_modules/.bun/hono@4.11.7/node_modules/hono/dist/compose.js:22:23)
      at <anonymous> (/Users/av/Documents/pavn/node_modules/.bun/hono@4.11.7/node_modules/hono/dist/hono-base.js:301:31)
      at <anonymous> (/Users/av/Documents/pavn/packages/shifts/tests/middleware.test.ts:46:31)

(pass) Middleware Verification > WH-112: Catch generic Error as 500 [0.21ms]

tests/history.test.ts:
(pass) GET /shifts/history > returns history shifts response [0.20ms]

tests/sprint_3_ghost_shifts.test.ts:
(pass) WH-114: Ghost Shift Tuning > 4h shift uses 2h minimum buffer [0.32ms]
(pass) WH-114: Ghost Shift Tuning > 12h shift uses 3h buffer (25%) [0.13ms]

tests/state-machine.test.ts:
(pass) Shift State Machine > allows valid normal flow [0.08ms]
(pass) Shift State Machine > allows cancellation from almost anywhere [0.01ms]
(pass) Shift State Machine > prevents skipping steps [0.03ms]
(pass) Shift State Machine > prevents back-flow [0.02ms]

tests/sprint_3_timesheet_status.test.ts:
(pass) WH-117: Timesheet Status Mapping > maps 'active' and 'assigned' to 'rostered' [0.30ms]
(pass) WH-117: Timesheet Status Mapping > maps 'completed' to 'submitted' [0.06ms]
(pass) WH-117: Timesheet Status Mapping > maps 'approved' to 'approved' [0.05ms]
(pass) WH-117: Timesheet Status Mapping > maps 'cancelled' and 'no_show' to 'blocked' [0.06ms]

tests/sprint_4_overlap.test.ts:
DEBUG: publishSchedule received: {
  status: "published",
  schedulesCount: 1,
  activeOrgId: "org1",
  recurrenceEnabled: undefined,
}
(pass) Publish Schedule - Overlap Detection > throws if DB conflict found [2.13ms]
DEBUG: publishSchedule received: {
  status: "published",
  schedulesCount: 2,
  activeOrgId: "org1",
  recurrenceEnabled: undefined,
}
(pass) Publish Schedule - Overlap Detection > throws if In-Memory conflict found (Double Booking) [1.10ms]
DEBUG: publishSchedule received: {
  status: "published",
  schedulesCount: 2,
  activeOrgId: "org1",
  recurrenceEnabled: undefined,
}
(pass) Publish Schedule - Overlap Detection > succeeds if no overlap [0.61ms]

tests/sprint_3_crew_search.test.ts:
(pass) WH-116: Crew Search > passes search term to DB query [0.42ms]
(pass) WH-116: Crew Search > passes pagination params [0.09ms]

tests/sprint_4_audit_no_show.test.ts:
(pass) Approve Shift - No Show Audit > logs audit event when worker is marked as no_show [0.69ms]

tests/pending.test.ts:
(pass) GET /shifts/pending-approval > returns pending shifts response

tests/worker-shifts.test.ts:
(pass) GET /worker/shifts > returns 200 OK and empty array for unknown user [0.63ms]
(pass) GET /worker/shifts > can fetch upcoming shifts [0.11ms]
(pass) GET /worker/shifts > can fetch history shifts

tests/sprint_2_features.test.ts:
[RateLock] Missing snapshot for assignment asgA. Fallback to shift price.
[RateLock] Missing snapshot for assignment asgB. Fallback to shift price.
[RateLock] Missing snapshot for assignment asgC. Fallback to shift price.
[RateLock] Missing snapshot for assignment asgD. Fallback to shift price.
(pass) Sprint 2 Features (Unit) > approves shift and applies Sprint 2 business rules correctly [0.45ms]

tests/wh126_break_enforcement.test.ts:
[RateLock] Missing snapshot for assignment a1. Fallback to shift price.
(pass) WH-126 Break Enforcement Removal > should use manager-specified break time (0 min) instead of enforcing rules [0.32ms]

tests/approve-race.test.ts:
(pass) approveShift Race Condition > successfully approves a 'completed' shift (Fixed SHIFT-001) [0.21ms]

src/utils/recurrence.test.ts:
(pass) expandRecurringDates > should return base dates if recurrence is disabled
(pass) expandRecurringDates > should expand weekly recurrence for fixed weeks [0.31ms]
(pass) expandRecurringDates > should expand biweekly recurrence [0.01ms]
(pass) expandRecurringDates > should respect end date [0.07ms]
(pass) expandRecurringDates > should generate multiple days per week

1 tests failed:

 48 pass
 1 fail
 1 error
 100 expect() calls
Ran 49 tests across 19 files. [240.00ms]
